# legiontret

./: .gitignore  Dockerfile  LICENSE  Makefile  Modelfile.example  README.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml  release.yml
clients/javascript/legiontret/: index.d.ts  index.js  package.json
clients/python/legiontret/: __init__.py  pyproject.toml
cmd/legiontret/: main.go
internal/api/: server.go
internal/config/: config.go
internal/download/: download.go
internal/llama/: process_unix.go  process_windows.go  server.go
internal/model/: model.go
internal/progress/: progress.go
internal/registry/: registry.go
internal/tui/: chat.go
scripts/: install.ps1  install.sh
