[build-system]
requires = ["setuptools>=61.0", "requests>=2.28.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "legiontret"
version = "1.0.0"
description = "Python client for LegionTret - Run LLMs locally"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]
authors = [
    {name = "Death Legion Team"},
]
keywords = ["llm", "ai", "legiontret", "ollama", "gemma", "llama", "mistral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/deathlegionteam/legiontret"
Repository = "https://github.com/deathlegionteam/legiontret"
